--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p class="ert"><a href="C:\Users\user\Desktop\NasecovCo\рекламный центр.html"><img src="C:\Users\user\Desktop\NasecovCo\img\logo.png" width="200"
     height="200" alt="Пример"></a>
   <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\index.html">Главная</a></button></li>
-            <li><button class="btn"><a href="45">О компании</a></button></li>
+            <li><button class="btn"><a href="https://github.com/mihidin/NASEKOVco/blob/52348113be9604f6fec487c1133ebb43cda98198/index1.html">О компании</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\УСЛУГИ.html">Услуги</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\Цены.html">Цены</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\контакты.html">Контакты</a></button></li>
