--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     height="200" alt="Пример"></a>
   <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\index.html">Главная</a></button></li>
             <li><button class="btn"><a href="https://github.com/mihidin/NASEKOVco/blob/52348113be9604f6fec487c1133ebb43cda98198/index1.html">О компании</a></button></li>
-            <li><button class="btn"><a href="https://github.com/mihidin/NASEKOVco/blob/5cea167684d9542dee349b1ecd6d644898c1c03f/index2.html">Услуги</a></button></li>
+            <li><button class="btn"><a href="index2.html">Услуги</a></button></li>
             <li><button class="btn"><a href="https://github.com/mihidin/NASEKOVco/blob/1b9acdeb09eb39c0063325070395baa058f51651/index3.html">Цены</a></button></li>
             <li><button class="btn"><a href="https://github.com/mihidin/NASEKOVco/blob/504c103cdc2e69c3292d5576c05f5a567aa0c305/index4.html">Контакты</a></button></li>
         </ul></p>
