--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\index.html">Главная</a></button></li>
             <li><button class="btn"><a href="index1.html">О компании</a></button></li>
             <li><button class="btn"><a href="index2.html">Услуги</a></button></li>
-            <li><button class="btn"><a href="https://github.com/mihidin/NASEKOVco/blob/1b9acdeb09eb39c0063325070395baa058f51651/index3.html">Цены</a></button></li>
+            <li><button class="btn"><a href="index3.html">Цены</a></button></li>
             <li><button class="btn"><a href="https://github.com/mihidin/NASEKOVco/blob/504c103cdc2e69c3292d5576c05f5a567aa0c305/index4.html">Контакты</a></button></li>
         </ul></p>
     </div>
