--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><button class="btn"><a href="index1.html">О компании</a></button></li>
             <li><button class="btn"><a href="index2.html">Услуги</a></button></li>
             <li><button class="btn"><a href="index3.html">Цены</a></button></li>
-            <li><button class="btn"><a href="https://github.com/mihidin/NASEKOVco/blob/504c103cdc2e69c3292d5576c05f5a567aa0c305/index4.html">Контакты</a></button></li>
+            <li><button class="btn"><a href="index4.html">Контакты</a></button></li>
         </ul></p>
     </div>
     <div class="blog" >
