--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </div>
     <div class="cvet">
         <ul>
-<p class="ert"><a href="C:\Users\user\Desktop\NasecovCo\рекламный центр.html"><img src="C:\Users\user\Desktop\NasecovCo\img\logo.png" width="200"
+<p class="ert"><a href="index.html"><img src="logo.png" width="200"
     height="200" alt="Пример"></a>
-  <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\index.html">Главная</a></button></li>
+  <li><button class="btn"><a href="index.html">Главная</a></button></li>
             <li><button class="btn"><a href="index1.html">О компании</a></button></li>
             <li><button class="btn"><a href="index2.html">Услуги</a></button></li>
             <li><button class="btn"><a href="index3.html">Цены</a></button></li>
@@ -34,7 +34,7 @@
     <div class="blog" >
         <h1>Рекламный центр NASEKOVco</h1>
         <p>Мы поможем вам сделать лучщие рекламы...</p>
-        <button class="custom-btn btn-9"> <a href="C:\Users\user\Desktop\NasecovCo\ОКОМПАНИИ.html"> ПОДРОБНЕЕ</a>
+        <button class="custom-btn btn-9"> <a href="index1.html"> ПОДРОБНЕЕ</a>
           </button>
         </div>
     <div class="razmer">
