--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="cvet">
         <ul>
-<p class="ert"><a href="index.html"><img src="logo.png" width="200"
+<p class="ert"><a href="index.html"><img src="img/logo.png" width="200"
     height="200" alt="Пример"></a>
   <li><button class="btn"><a href="index.html">Главная</a></button></li>
             <li><button class="btn"><a href="index1.html">О компании</a></button></li>
