--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         </div>
     <div class="razmer">
         <h2>Наши услуги</h2>
-         <div class="a"><a href="#"><img src="C:\Users\user\Desktop\NasecovCo\img\1.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Печать</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
-         <div class="b"><a href="#"><img src="C:\Users\user\Desktop\NasecovCo\img\2.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Монтаж рекламы</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
-         <div class="c"><a href="#"><img src="C:\Users\user\Desktop\NasecovCo\img\3.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Полиграфия</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
-         <div class="d"><a href="#"><img src="C:\Users\user\Desktop\NasecovCo\img\4.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Дизайн рекламы</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
+         <div class="a"><a href="#"><img src="img/1.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Печать</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
+         <div class="b"><a href="#"><img src="img/2.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Монтаж рекламы</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
+         <div class="c"><a href="#"><img src="img/3.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Полиграфия</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
+         <div class="d"><a href="#"><img src="img/4.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Дизайн рекламы</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
     </div>
 <div class="tolkounas">
         <h2 class="center">Только у нас</h2>
-        <div class="e"><img src="C:\Users\user\Desktop\NasecovCo\img\Рисунок1.png" width="120" height="120" class="divcenter"/><h3 align="center">Печать</h3></a><p>Наверняка у вас много сильных сторон и уникальных товаров.</p></div>
-        <div class="f"><img src="C:\Users\user\Desktop\NasecovCo\img\zIeduMux.png" width="120" height="120" class="divcenter"/><h3 align="center">Монтаж рекламы</h3></a><p>Обычно достаточно четырех пунктов о ваших ключевых особенностях.</p></div>
-        <div class="g"><img src="C:\Users\user\Desktop\NasecovCo\img\Рисунок2.png" width="130" height="130" class="divcenter"/><h3 align="center">Полиграфия</h3></a><p>Вы делаете акции со скидками в честь дня рождения вашего клиента?</p></div>
+        <div class="e"><img src="img/Рисунок1.png" width="120" height="120" class="divcenter"/><h3 align="center">Печать</h3></a><p>Наверняка у вас много сильных сторон и уникальных товаров.</p></div>
+        <div class="f"><img src="img/zIeduMux.png" width="120" height="120" class="divcenter"/><h3 align="center">Монтаж рекламы</h3></a><p>Обычно достаточно четырех пунктов о ваших ключевых особенностях.</p></div>
+        <div class="g"><img src="img/Рисунок2.png" width="130" height="130" class="divcenter"/><h3 align="center">Полиграфия</h3></a><p>Вы делаете акции со скидками в честь дня рождения вашего клиента?</p></div>
     </div>
     <div class="podval">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.9199568381487!2d75.29145747599688!3d42.85342327115136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389c0a61e71d7cc7%3A0x8939d8930bde4ce1!2zMjA2INGD0LvQuNGG0LAg0KHRg9C70YLQsNC90LAg0JjQsdGA0LDQuNC80L7QstCwLCDQotC-0LrQvNC-0Lo!5e0!3m2!1sru!2skg!4v1716620592812!5m2!1sru!2skg" width="1150" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
