--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
 <p class="ert"><a href="index.html"><img src="img/logo.png" width="200"
     height="200" alt="Пример"></a>
   <li><button class="btn"><a href="index.html">Главная</a></button></li>
-            <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\ОКОМПАНИИ.html">О компании</a></button></li>
+            <li><button class="btn"><a href="index1.html">О компании</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\УСЛУГИ.html">Услуги</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\Цены.html">Цены</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\контакты.html">Контакты</a></button></li>
