--- a/index2.html
+++ b/index2.html
@@ -26,20 +26,20 @@
             <li><button class="btn"><a href="index1.html">О компании</a></button></li>
             <li><button class="btn"><a href="index2.html">Услуги</a></button></li>
             <li><button class="btn"><a href="index3.html">Цены</a></button></li>
-            <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\контакты.html">Контакты</a></button></li>
+            <li><button class="btn"><a href="index4.html">Контакты</a></button></li>
         </ul></p>
     </div>
         <div class="razmer1">
             <h2>Наши услуги</h2>
-             <div class="a1"><a href="#"><img src="C:\Users\user\Desktop\NasecovCo\img\1.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Печать</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
-             <div class="b1"><a href="#"><img src="C:\Users\user\Desktop\NasecovCo\img\2.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Монтаж рекламы</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
-             <div class="c1"><a href="#"><img src="C:\Users\user\Desktop\NasecovCo\img\3.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Полиграфия</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
-             <div class="d1"><a href="#"><img src="C:\Users\user\Desktop\NasecovCo\img\4.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Дизайн рекламы</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
+             <div class="a1"><a href="#"><img src="img/1.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Печать</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
+             <div class="b1"><a href="#"><img src="img/2.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Монтаж рекламы</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
+             <div class="c1"><a href="#"><img src="img/3.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Полиграфия</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
+             <div class="d1"><a href="#"><img src="img/4.jpg" width="250" height="250" class="divcenter"/><h3 align="center">Дизайн рекламы</h3></a><p>Разместите тут небольшое, но заманчивое, описание особого предложения.</p></div>
         </div>
     <div class="tolkounas1">
         <h2 class="center">Суперпредложение от NASEKOVco!</h2>
         <h2 class="center">Монтаж рекламы</h2>
-        <img src="C:\Users\user\Desktop\NasecovCo\img\20.png" width="300" height="300" class="raspol"/>
+        <img src="img/20.png" width="300" height="300" class="raspol"/>
       <p class="super">Все действия в конструкторе можно отменить и вернуть, поэтому не волнуйтесь если что-то пойдет не так. Вы можете менять цвет,стиль текста и даже поставить ссылку.
 
         Не бойтесь экспериментировать с конструктором, богатый выбор шаблонов и альтернативные варианты стилизации виджетов помогут вам подобрать индивидуальный характер вашего сайта.</p>
@@ -57,7 +57,7 @@
      С кем вы сотрудничаете, каких успехов добились.
     
     Написать немного о своей команде.</i>
-    <div class="a2"><img src="C:\Users\user\Desktop\NasecovCo\img\1.jpg" width="290" height="380" class="divcenter"/></div>
+    <div class="a2"><img src="img/1.jpg" width="290" height="380" class="divcenter"/></div>
          <div class="b2"><h1 align="center">Список услуг</h1>
             <hr>
             <li> Первая услуга;</li><br>
@@ -68,7 +68,7 @@
             </li>
            <hr>
         </div>
-         <div class="с2"><h1 align="center">Полный перечень наших товаров и услуг.</h1><p align="center"><i>Скачать cсылку PDF-файл...</i></p><a href="C:\Users\user\Desktop\NasecovCo\documents\слайдер.pdf" target="_blank"><p align="center"><img src="C:\Users\user\Desktop\NasecovCo\img\пдф.png" width="200" height="200"/></a></p></div>
+         <div class="с2"><h1 align="center">Полный перечень наших товаров и услуг.</h1><p align="center"><i>Скачать cсылку PDF-файл...</i></p><a href="documents/слайдер.pdf" target="_blank"><p align="center"><img src="img/пдф.png" width="200" height="200"/></a></p></div>
     </div>
     <div class="podval">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.9199568381487!2d75.29145747599688!3d42.85342327115136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389c0a61e71d7cc7%3A0x8939d8930bde4ce1!2zMjA2INGD0LvQuNGG0LAg0KHRg9C70YLQsNC90LAg0JjQsdGA0LDQuNC80L7QstCwLCDQotC-0LrQvNC-0Lo!5e0!3m2!1sru!2skg!4v1716620592812!5m2!1sru!2skg" width="1150" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
