--- a/index4.html
+++ b/index4.html
@@ -11,9 +11,9 @@
 <body>
     <div class="konkretno">
         <ul>
-<p class="ert"><a href="C:\Users\user\Desktop\NasecovCo\рекламный центр.html"><img src="C:\Users\user\Desktop\NasecovCo\img\logo.png" width="200"
+<p class="ert"><a href="index.html"><img src="img/logo.png" width="200"
     height="200" alt="Пример"></a>
-  <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\рекламный центр.html">Главная</a></button></li>
+  <li><button class="btn"><a href="index.html">Главная</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\ОКОМПАНИИ.html">О компании</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\УСЛУГИ.html">Услуги</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\Цены.html">Цены</a></button></li>
