--- a/index4.html
+++ b/index4.html
@@ -15,7 +15,7 @@
     height="200" alt="Пример"></a>
   <li><button class="btn"><a href="index.html">Главная</a></button></li>
             <li><button class="btn"><a href="index1.html">О компании</a></button></li>
-            <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\УСЛУГИ.html">Услуги</a></button></li>
+            <li><button class="btn"><a href="index2.html">Услуги</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\Цены.html">Цены</a></button></li>
             <li><button class="btn"><a href="C:\Users\user\Desktop\NasecovCo\контакты.html">Контакты</a></button></li>
         </ul></p></div>
