--- a/index1.html
+++ b/index1.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="shapka">
-    <a href="tel:+996502192028"><i class="fa fa-phone" aria-hidden="true">+(996) 551-60-98-48</i></a>,&nbsp; 
+    <a href="tel:+996551609848"><i class="fa fa-phone" aria-hidden="true">+(996) 551-60-98-48</i></a>,&nbsp; 
     <a href="https://go.2gis.com/f3wsw" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"> Токмок, ул. Султана Ибраимова, 206</i></a>
     <p class="otstup">
-    <a href="https://www.instagram.com/gruzoperevozka.tokmok/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
+    <a href="https://www.instagram.com/nasekovco/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
     <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
-    <a href="https://wa.me/996502192021?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+    <a href="https://wa.me/996708609848?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></p>
     </div>
     <div class="konkretno">
@@ -64,7 +64,7 @@
             </div>
             <p align="right">Ещё больше на нашем инстаграмм аккаунте<img src="img/стрелка.png" width="50"
                 height="50"></p> 
-           <p align="right" ><a href="https://www.instagram.com/gruzoperevozka.tokmok/" target="_blank"> <img src="img/free-icon-instagram-2111463.png"  width="80"
+           <p align="right" ><a href="https://www.instagram.com/nasekovco/" target="_blank"> <img src="img/free-icon-instagram-2111463.png"  width="80"
                 height="80" alt="Инстаграм аккаунт"></a></p> 
     </div>
     <div class="tolkounas">
