--- a/index2.html
+++ b/index2.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="shapka">
-    <a href="tel:+996502192028"><i class="fa fa-phone" aria-hidden="true">+(996) 551-60-98-48</i></a>,&nbsp; 
+    <a href="tel:+996551609848"><i class="fa fa-phone" aria-hidden="true">+(996) 551-60-98-48</i></a>,&nbsp; 
     <a href="https://go.2gis.com/f3wsw" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"> Токмок, ул. Султана Ибраимова, 206</i></a>
     <p class="otstup">
-    <a href="https://www.instagram.com/gruzoperevozka.tokmok/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
+    <a href="https://www.instagram.com/nasekovco/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
     <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
-    <a href="https://wa.me/996502192021?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+    <a href="https://wa.me/996708609848?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></p>
     </div>
     <div class="konkretno">
@@ -43,7 +43,7 @@
       <p class="super">Все действия в конструкторе можно отменить и вернуть, поэтому не волнуйтесь если что-то пойдет не так. Вы можете менять цвет,стиль текста и даже поставить ссылку.
 
         Не бойтесь экспериментировать с конструктором, богатый выбор шаблонов и альтернативные варианты стилизации виджетов помогут вам подобрать индивидуальный характер вашего сайта.</p>
-       <p align="center"> <button class="custom-btn btn-9"><a href="https://wa.me/996502192021?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank">Заказать</a>
+       <p align="center"> <button class="custom-btn btn-9"><a href="https://wa.me/996708609848?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank">Заказать</a>
         </button></p>
     </div>
     <div class="spisok">
