--- a/index3.html
+++ b/index3.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="shapka">
-    <a href="tel:+996502192028"><i class="fa fa-phone" aria-hidden="true">+(996) 551-60-98-48</i></a>,&nbsp; 
+    <a href="tel:+996551609848"><i class="fa fa-phone" aria-hidden="true">+(996) 551-60-98-48</i></a>,&nbsp; 
     <a href="https://go.2gis.com/f3wsw" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"> Токмок, ул. Султана Ибраимова, 206</i></a>
     <p class="otstup">
-    <a href="https://www.instagram.com/gruzoperevozka.tokmok/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
+    <a href="https://www.instagram.com/nasekovco/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
     <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
-    <a href="https://wa.me/996502192021?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+    <a href="https://wa.me/996708609848?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></p>
     </div>
     <div class="konkretno">
@@ -41,17 +41,17 @@
                 <tr height="55"> 
                  <td>Услуга1</td><td>Описание услуги</td>
                  <td>Дополнительно</td><td class="rub">100 руб</td>
-                 <td><button class="custom-btn btn-9"><a href="https://wa.me/996502192021?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank">Связаться</a>
+                 <td><button class="custom-btn btn-9"><a href="https://wa.me/996708609848?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank">Связаться</a>
                  </button></p></td>
                 </tr>
                 <tr height="55"> 
                  <td>Услуга2</td><td>Описание услуги</td>
-                 <td>Дополнительно</td><td class="rub">100 руб</td><td><button class="custom-btn btn-9"><a href="https://wa.me/996502192021?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank">Связаться</a>
+                 <td>Дополнительно</td><td class="rub">100 руб</td><td><button class="custom-btn btn-9"><a href="https://wa.me/996708609848?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank">Связаться</a>
                  </button></p></td>
                 </tr>
                 <tr height="55"> 
                  <td>Услуга3</td><td>Описание услуги</td>
-                 <td>Дополнительно</td><td class="rub">100 руб</td><td><button class="custom-btn btn-9"><a href="https://wa.me/996502192021?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank">Связаться</a>
+                 <td>Дополнительно</td><td class="rub">100 руб</td><td><button class="custom-btn btn-9"><a href="https://wa.me/996708609848?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank">Связаться</a>
                  </button></p></td>
                 </tr>
                </table>
