--- a/index4.html
+++ b/index4.html
@@ -24,10 +24,10 @@
         <iframe width="500" height="315" src="https://www.youtube.com/embed/Mmm74wsIzPQ?si=f1i-IjpW1x-nW5X3&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         <div class="divijok">
             <p>
-            <i><a href="tel:+996502192028"><i class="fa fa-phone" aria-hidden="true"><i class="uvel">+(996) 551-60-98-48</i></i></a><br><br>
+            <i><a href="tel:+996551609848"><i class="fa fa-phone" aria-hidden="true"><i class="uvel">+(996) 551-60-98-48</i></i></a><br><br>
             <a href="https://go.2gis.com/f3wsw" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"> <i class="uvel">Токмок, ул. Султана Ибраимова, 206</i></i></a>
             <p>
-            <a href="https://www.instagram.com/gruzoperevozka.tokmok/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
+            <a href="https://www.instagram.com/nasekovco/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
             <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
             <a href="https://wa.me/996551609848?text=Здравствуйте, хочу заказать рекламный баннер от NASEKOVco!!!" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
             <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></p>
